Initial commit: FretLog with GHCR automation

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,9 +9,8 @@ on:
     branches: [ "main" ]
 
 env:
-  # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  # github.repository as <account>/<repo>
+  # Use the lowercase version of the repository name
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
