chore: bump version to 0.3.5

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,6 @@ services:
       - "5000:5000"
     environment:
       - DATABASE_PATH=/app/data/fretlog.db
+      - FLASK_DEBUG=0
     volumes:
       - ./data:/app/data
